Validacuones_usarios_beneficios_comisiones_OJO Revisar funcionalidad de COMISIONES

--- a/src/main/resources/templates/fragments/beneficio/beneficioform.html
+++ b/src/main/resources/templates/fragments/beneficio/beneficioform.html
@@ -7,27 +7,40 @@
   </head>
 <body>
 <div class="container">
-    <h2>Usuario Details</h2>
+    <h2 align="center">Formulario de Beneficios</h2>
     <div>
         <form class="form-horizontal" th:object="${beneficio}" th:action="@{../beneficio}" method="post">
             <input type="hidden" th:field="*{codigobeneficio}"/>
             <input type="hidden" th:field="*{nombrebeneficio}"/>
-            <div class="form-group">
+<!--            <div class="form-group">
                 <label class="col-sm-2 control-label">Codigo de Beneficio:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control" th:field="*{codigobeneficio}"/>
                 </div>
-            </div>
+            </div>-->
             <div class="form-group">
                 <label class="col-sm-2 control-label">Nombre de Beneficio:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{nombrebeneficio}"/>
+                    <input type="text" class="form-control" required="true" size="30" maxlength="30" th:field="*{nombrebeneficio}"/>
                 </div>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">Contraseña de beneficio:</label>
+                <label class="col-sm-2 control-label">Descripcion Beneficio:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{descripcionbeneficio}"/>
+                    <input type="text" class="form-control" size="100" maxlength="100" required="true" th:field="*{descripcionbeneficio}"/>
+                </div>
+            </div>
+<div class="form-group">
+                <label class="col-sm-2 control-label">Fecha de inicio:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control"  required="true" th:field="*{fechainiciobeneficio}"/>
+                </div>
+            </div>
+
+<div class="form-group">
+                <label class="col-sm-2 control-label">Fecha de Finalizacion:</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" required="true" th:field="*{fechafinalizarbeneficio}"/>
                 </div>
             </div>
             
@@ -39,4 +52,41 @@
 </div>
 
 </body>
+<script>
+    $(document).ready(function () {
+        $('#fechainiciobeneficio').datepicker({
+            dateFormat: 'yy-mm-dd'
+        });
+
+        $('#fechafinalizarbeneficio').datepicker({
+            dateFormat: 'yy-mm-dd'
+        });
+       
+    });
+</script>
+
+</body>
+<script th:inline="javascript">
+    $(document).ready(function () {
+    if([[${msg}]]===0){
+       swal({
+                title: "Exito!",
+                text: "Registro agregado correctamente",
+                type: "success",
+                icon: "success"
+       }).then(function() {
+                location.href = '../beneficios/';
+       }); 
+}
+    
+    if([[${msg}]]===1){
+        swal({
+                title: "ERROR!",
+                text: "Ocurrio un error en el proceso",
+                type: "error",
+                icon: "error"
+       });
+    }
+    });
+</script> 
 </html>
