--- a/src/main/resources/templates/fragments/comision/comisionform.html
+++ b/src/main/resources/templates/fragments/comision/comisionform.html
@@ -1,42 +1,91 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head lang="en">
+    <head lang="en">
 
-    <title>Nuevo comision</title>
-  <th:block th:include="../templates/header"></th:block>
-  </head>
+        <title>Nueva Comision</title>
+    <th:block th:include="../templates/header"></th:block>
+</head>
 <body>
-<div class="container">
-    <h2>Usuario Details</h2>
-    <div>
-        <form class="form-horizontal" th:object="${comision}" th:action="@{../comision}" method="post">
-            <input type="hidden" th:field="*{codigocomision}"/>
-            <input type="hidden" th:field="*{nombrecomision}"/>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Codigo de Beneficio:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{codigocomision}"/>
+    <div class="container">
+        <h2 align="center">Nueva Comision</h2>
+        <div>
+            <form class="form-horizontal" th:object="${comision}" th:action="@{../comision}" method="post">
+                <input type="hidden" th:field="*{codigocomision}"/>
+                <input type="hidden" th:field="*{nombrecomision}"/>
+                <!--            <div class="form-group">
+                                <label class="col-sm-2 control-label">Codigo de Beneficio:</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" th:field="*{codigocomision}"/>
+                                </div>
+                            </div>-->
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Nombre Comision:</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" size="50" maxlength="50" required="true" th:field="*{nombrecomision}"/>
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Nombre de Beneficio:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{nombrecomision}"/>
+                <!--            <div class="form-group">
+                                <label class="col-sm-2 control-label">Representa a:</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" th:field="*{descripcioncomision}"/>
+                                </div>
+                            </div>-->
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Fecha Desde:</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" required="true" th:field="*{fechadesdecomision}"/>
+                    </div>
                 </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">Contraseña de comision:</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{descripcioncomision}"/>
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Fecha Hasta:</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" required="true" th:field="*{fechahastacomision}"/>
+                    </div>
                 </div>
-            </div>
-            
-            <div class="row">
-                <button type="submit" class="btn btn-default">Agregar</button>
-            </div>
-        </form>
+
+                <div class="row">
+                    <button type="submit" class="btn btn-default">Agregar</button>
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
 </body>
+<script>
+    $(document).ready(function () {
+        $('#fechadesdecomision').datepicker({
+            dateFormat: 'yy-mm-dd'
+        });
+
+        $('#fechahastacomision').datepicker({
+            dateFormat: 'yy-mm-dd'
+        });
+       
+    });
+</script>
+
+</body>
+<script th:inline="javascript">
+    $(document).ready(function () {
+    if([[${msg}]]===0){
+       swal({
+                title: "Exito!",
+                text: "Registro agregado correctamente",
+                type: "success",
+                icon: "success"
+       }).then(function() {
+                location.href = '../comisiones/';
+       }); 
+}
+    
+    if([[${msg}]]===1){
+        swal({
+                title: "ERROR!",
+                text: "Ocurrio un error en el proceso",
+                type: "error",
+                icon: "error"
+       });
+    }
+    });
+</script> 
 </html>
