--- a/src/main/resources/templates/fragments/comision/comisionshow.html
+++ b/src/main/resources/templates/fragments/comision/comisionshow.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="container">
-    <h2>Datos de Usuario</h2>
+    <h2>Detalle de Comisiones</h2>
         <div>
             <form class="form-horizontal">
                 
@@ -25,14 +25,29 @@
                         <p class="form-control-static" th:text="${comision.nombrecomision}">Nombre</p>
                     </div>
                 </div>
-                <div class="form-group">
-                    <label class="col-sm-2 control-label">descripcion:</label>
+             
+                
+                 <div class="form-group">
+                    <label class="col-sm-2 control-label">Fecha de Inicio de Beneficio:</label>
                     <div class="col-sm-10">
-                        <p class="form-control-static" th:text="${comision.descripcioncomision}">descripcion</p>
+                        <p class="form-control-static" th:text="${comision.fechadesdecomision}">descripcion</p>
+                    </div>
+                </div>
+                
+                <div class="form-group">
+                    <label class="col-sm-2 control-label">Fecha Fin de Beneficio:</label>
+                    <div class="col-sm-10">
+                        <p class="form-control-static" th:text="${comision.fechahastacomision}">descripcion</p>
                     </div>
                 </div>
                 
             </form>
+             <div class="col-md-12">
+                    <div class="row" align="center">
+                        <button type="button" class="btn btn-default"><a href="#" th:href="@{/comisiones/}">Regresar</a></button>
+
+                    </div>
+                </div>
     </div>
 </div>
 
