--- a/src/main/resources/templates/fragments/rol/rolform.html
+++ b/src/main/resources/templates/fragments/rol/rolform.html
@@ -12,30 +12,30 @@
         <form class="form-horizontal" th:object="${rol}" th:action="@{../rol}" method="post">
             <input type="hidden" th:field="*{codigorol}"/>
             <input type="hidden" th:field="*{nombrerol}"/>
-            <div class="form-group">
+<!--            <div class="form-group">
                 <label class="col-sm-2 control-label">COdigo de Rol:</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control " th:field="*{codigorol}"/>
                 </div>
-            </div>
+            </div>-->
             <div class="form-group">
                 <label class="col-sm-2 control-label">Nombre de Rol:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{nombrerol}"/>
+                    <input type="text" class="form-control" required="true" size="100" maxlength="100" th:field="*{nombrerol}"/>
                 </div>
             </div>
             <div class="form-group">
                 <label class="col-sm-2 control-label">Descripcion de rol:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" th:field="*{descripcionrol}"/>
+                    <input type="text" class="form-control" required="true" size="30" maxlength="30" th:field="*{descripcionrol}"/>
                 </div>
             </div>
-            <div class="form-group">
+<!--            <div class="form-group">
                 <label class="col-sm-2 control-label">EJEMPLO DE DUI:</label>
                 <div class="col-sm-10">
                     <input type="text" class="num_dui" />
                 </div>
-            </div>
+            </div>-->
 
             <div class="row">
                 <button type="submit" class="btn btn-default">Agregar</button>
