--- a/src/main/resources/templates/fragments/usuario/usuarios.html
+++ b/src/main/resources/templates/fragments/usuario/usuarios.html
@@ -31,7 +31,8 @@
                 <td th:text="${usuario.fechabaja}">fecha baja</td>
                 <td><a th:href="${'./show/' + usuario.codigousuario}" class="btn btn-default">Mostrar</a></td>
                 <td><a th:href="${'./edit/' + usuario.codigousuario}" class="btn btn-default">Edit</a></td>
-                <td><a th:href="${'./delete/' + usuario.codigousuario}" class="btn btn-danger">Delete</a></td>
+                 <td><a  class="btn btn-danger" th:onclick="'eliminar(\'' + ${usuario.codigousuario} + '\');'" >Delete</a></td>
+                <!--<td><a th:href="${'./delete/' + usuario.codigousuario}" class="btn btn-danger">Delete</a></td>-->
             </tr>
         </table>
     </div>
