--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -96,6 +96,11 @@
 					<ul class="dropdown-menu forAnimate" role="menu">
 						<li><a href="#" th:href="@{/costocapacitaciones/}">Consultar Costo Capacitaciones</a></li>
                                                  <li><a href="#" th:href="@{/costocapacitaciones/new/costocapacitacion}">Crear Costo Capacitacion</a></li>
+                                                  <li><a href="#" class="dropdown">Crear Costo Capacitacion2</a>
+                                                    <ul class="dropdown-menu forAnimate" >
+                                                      <li><a href="#" th:href="@{/costocapacitaciones/new/costocapacitacion}">Crear Costo Capacitacion2</a></li>
+                                                    </ul>
+                                                 </li>
 <!--                                                 <li><a href="#" th:href="@{/costocapacitaciones/report/}">Reporte comites</a></li>-->
                                         </ul>
 				</li>
@@ -139,9 +144,9 @@
                                 <li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Gestionar Comisiones <span class="caret"></span><span style="font-size:16px;" class="pull-right hidden-xs showopacity glyphicon glyphicon-cog"></span></a>
 					<ul class="dropdown-menu forAnimate" role="menu">
-                                                <li><a href="#" th:href="@{/comisiones/}">Consultar Puestos</a></li>
-                                                <li><a href="#" th:href="@{/comisiones/new/comision}">Crear Puesto</a></li>
-                                                <li><a href="#" th:href="@{/comisiones/reporte/comision}">Reporte Puestos a Caducar</a></li>
+                                                <li><a href="#" th:href="@{/comisiones/}">Consultar Comisiones</a></li>
+                                                <li><a href="#" th:href="@{/comisiones/new/comision}">Crear Comisiones</a></li>
+                                                <li><a href="#" th:href="@{/comisiones/reporte/comision}">Reporte de Comisiones</a></li>
 					</ul>
 				</li>
                                 
