report_misiones_cumple_comite sin imagenes furuland

--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_misionesinternas.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_misionesinternas.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="9e2a8e50-efd2-42d9-ab62-dda75ce1c952">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="96"/>
 	<parameter name="FACHAINICIO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
@@ -13,10 +13,8 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[SELECT count(e.codigoempleado)as totalRegistros, e.nombreempleado,p.nombrepuesto,m.nombremision,m.objetivomision,m.departamentomision,m.fechasalidamision,m.fecharegresomision FROM empleado e INNER JOIN empleadomision em on e.codigoempleado=em.codigoempleado INNER JOIN mision m on em.codigomision=m.codigomision INNER JOIN puesto p on e.codigoempleado=p.codigoempleado 
-where e.codigoempleado=$P{CODIGO} and 
-m.fecharegresomision>=$P{FACHAINICIO} and
-m.fechasalidamision<=$P{FECHAFIN}]]>
+		<![CDATA[select count(m.codigomision) totalRegistros, e.nombreempleado,p.nombrepuesto,m.nombremision,m.objetivomision,m.fechasalidamision,m.fecharegresomision,m.departamentomision from empleado e inner join empleadopuesto ep on e.codigopuesto=ep.codigopuesto inner join puesto p on ep.codigopuesto=p.codigopuesto inner join empleadomision em on e.codigoempleado=em.codigoempleado inner join mision m on em.codigomision=m.codigomision
+]]>
 	</queryString>
 	<field name="totalRegistros" class="java.lang.Long"/>
 	<field name="nombreempleado" class="java.lang.String">
@@ -31,13 +29,13 @@ m.fechasalidamision<=$P{FECHAFIN}]]>
 	<field name="objetivomision" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="departamentomision" class="java.lang.String">
-		<fieldDescription><![CDATA[]]></fieldDescription>
-	</field>
 	<field name="fechasalidamision" class="java.sql.Date">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
 	<field name="fecharegresomision" class="java.sql.Date">
+		<fieldDescription><![CDATA[]]></fieldDescription>
+	</field>
+	<field name="departamentomision" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
 	<background>
@@ -66,14 +64,6 @@ m.fechasalidamision<=$P{FECHAFIN}]]>
 				</textElement>
 				<text><![CDATA[SISADMRH]]></text>
 			</staticText>
-			<image>
-				<reportElement x="5" y="8" width="200" height="63" uuid="e56e1832-a061-4bfe-8569-f2603978097b"/>
-				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("GOES.jpg")]]></imageExpression>
-			</image>
-			<image>
-				<reportElement x="648" y="3" width="137" height="69" uuid="3f731725-cd36-43d2-8d8d-c542e46dc0c1"/>
-				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("LOGOMJ.jpg")]]></imageExpression>
-			</image>
 		</band>
 	</title>
 	<pageHeader>
@@ -83,7 +73,7 @@ m.fechasalidamision<=$P{FECHAFIN}]]>
 				<textElement>
 					<font fontName="Times New Roman" size="12"/>
 				</textElement>
-				<text><![CDATA[Reportes de Misiones Internas]]></text>
+				<text><![CDATA[Reporte de Misiones Internas]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="247" y="47" width="44" height="20" uuid="fba48178-f73d-4d13-81b1-90bc0e80d668"/>
@@ -153,49 +143,49 @@ m.fechasalidamision<=$P{FECHAFIN}]]>
 	<columnHeader>
 		<band height="61" splitType="Stretch">
 			<staticText>
-				<reportElement x="9" y="30" width="100" height="20" uuid="938d790d-6b9d-4af6-8c5f-30a8035aa622"/>
+				<reportElement x="26" y="30" width="59" height="20" uuid="938d790d-6b9d-4af6-8c5f-30a8035aa622"/>
 				<textElement>
 					<font fontName="Times New Roman" size="12"/>
 				</textElement>
 				<text><![CDATA[Empleado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="129" y="28" width="100" height="20" uuid="9132f985-7e2e-4665-b844-dbc536e18415"/>
+				<reportElement x="151" y="28" width="45" height="20" uuid="9132f985-7e2e-4665-b844-dbc536e18415"/>
 				<textElement>
 					<font fontName="Times New Roman" size="12"/>
 				</textElement>
 				<text><![CDATA[Puesto]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="251" y="28" width="100" height="20" uuid="8cb599ec-5f63-4ed1-99f1-1aa16d4e9d95"/>
+				<reportElement x="276" y="28" width="52" height="20" uuid="8cb599ec-5f63-4ed1-99f1-1aa16d4e9d95"/>
 				<textElement>
 					<font fontName="Times New Roman" size="12"/>
 				</textElement>
-				<text><![CDATA[nombremision]]></text>
+				<text><![CDATA[Mision]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="364" y="30" width="100" height="20" uuid="b9958f6d-f205-489c-8bcf-14307b18299c"/>
+				<reportElement x="377" y="30" width="55" height="20" uuid="b9958f6d-f205-489c-8bcf-14307b18299c"/>
 				<textElement>
 					<font fontName="Times New Roman" size="12"/>
 				</textElement>
-				<text><![CDATA[objetivomision]]></text>
+				<text><![CDATA[Objetivo]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="485" y="30" width="100" height="20" uuid="3bf28f6b-dbc1-456e-81b1-36c8e0bef1f6"/>
+				<reportElement x="495" y="30" width="81" height="20" uuid="3bf28f6b-dbc1-456e-81b1-36c8e0bef1f6"/>
 				<textElement>
 					<font fontName="Times New Roman" size="12"/>
 				</textElement>
-				<text><![CDATA[departamentomision]]></text>
+				<text><![CDATA[Deparatamento]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="602" y="30" width="100" height="20" uuid="97387aca-cd7f-4443-958e-68c3cc3ee73e"/>
+				<reportElement x="614" y="30" width="64" height="20" uuid="97387aca-cd7f-4443-958e-68c3cc3ee73e"/>
 				<textElement>
 					<font fontName="Times New Roman" size="12"/>
 				</textElement>
 				<text><![CDATA[Desde]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="706" y="30" width="100" height="20" uuid="6f7f69f8-0340-4226-9155-2923b07ba1fa"/>
+				<reportElement x="721" y="30" width="74" height="20" uuid="6f7f69f8-0340-4226-9155-2923b07ba1fa"/>
 				<textElement>
 					<font fontName="Times New Roman" size="12"/>
 				</textElement>
@@ -206,51 +196,51 @@ m.fechasalidamision<=$P{FECHAFIN}]]>
 	<detail>
 		<band height="20" splitType="Stretch">
 			<textField>
-				<reportElement x="5" y="0" width="100" height="20" uuid="962f8851-725c-4281-9391-d77325c0982d"/>
+				<reportElement x="13" y="0" width="100" height="20" uuid="962f8851-725c-4281-9391-d77325c0982d"/>
 				<textElement>
-					<font fontName="Times New Roman" size="12"/>
+					<font fontName="Times New Roman" size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nombreempleado}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="125" y="0" width="100" height="20" uuid="99d95030-5d1c-4eea-81e2-69aa4bb04f10"/>
+				<reportElement x="133" y="0" width="100" height="20" uuid="99d95030-5d1c-4eea-81e2-69aa4bb04f10"/>
 				<textElement>
-					<font fontName="Times New Roman" size="12"/>
+					<font fontName="Times New Roman" size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nombrepuesto}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="247" y="0" width="100" height="20" uuid="cc1a166a-f1a5-4ff6-a98f-499daf1c5959"/>
+				<reportElement x="255" y="0" width="100" height="20" uuid="cc1a166a-f1a5-4ff6-a98f-499daf1c5959"/>
 				<textElement>
-					<font fontName="Times New Roman" size="12"/>
+					<font fontName="Times New Roman" size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{nombremision}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="360" y="0" width="100" height="20" uuid="623007a8-c4fd-4a36-a5b2-8dda3fb4a47f"/>
+				<reportElement x="368" y="0" width="100" height="20" uuid="623007a8-c4fd-4a36-a5b2-8dda3fb4a47f"/>
 				<textElement>
-					<font fontName="Times New Roman" size="12"/>
+					<font fontName="Times New Roman" size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{objetivomision}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="481" y="0" width="100" height="20" uuid="aa722cd9-54ef-47d5-8052-7daf433e83ea"/>
+				<reportElement x="485" y="0" width="100" height="20" uuid="aa722cd9-54ef-47d5-8052-7daf433e83ea"/>
 				<textElement>
-					<font fontName="Times New Roman" size="12"/>
+					<font fontName="Times New Roman" size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{departamentomision}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="598" y="0" width="100" height="20" uuid="0a8218f8-b3e1-4489-8597-6f487283f94e"/>
+				<reportElement x="602" y="0" width="100" height="20" uuid="0a8218f8-b3e1-4489-8597-6f487283f94e"/>
 				<textElement>
-					<font fontName="Times New Roman" size="12"/>
+					<font fontName="Times New Roman" size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{fechasalidamision}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="713" y="0" width="85" height="20" uuid="4467e007-9460-4e64-a69e-0368c9d1578e"/>
+				<reportElement x="717" y="0" width="85" height="20" uuid="4467e007-9460-4e64-a69e-0368c9d1578e"/>
 				<textElement>
-					<font fontName="Times New Roman" size="12"/>
+					<font fontName="Times New Roman" size="10"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{fecharegresomision}]]></textFieldExpression>
 			</textField>
