--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_comites.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_comites.jrxml
@@ -2,10 +2,22 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="c79f703b-bf01-4865-bd2b-701eb356ba3a">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="5"/>
-	<queryString language="SQL">
+	<property name="ireport.y" value="0"/>
+	<parameter name="CODIGO" class="java.lang.String">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
+	<parameter name="FECHAINICIO" class="java.lang.String">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
+	<parameter name="FECHAFIN" class="java.lang.String">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
+	<queryString>
 		<![CDATA[select COUNT(c.codigocomite), e.nombreempleado,p.nombrepuesto,c.numeroacuerdocomite,c.nombrecomite,c.fechadesdecomite,c.fechahastacomite from empleado e 
-	 inner join empleadopuesto ep ON ep.codigoempleado=ep.codigoempleado inner join puesto p on ep.codigopuesto=p.codigopuesto INNER join comite c on e.codigoempleado=c.codigoempleado]]>
+ inner join empleadopuesto ep ON ep.codigoempleado=ep.codigoempleado inner join puesto p on ep.codigopuesto=p.codigopuesto INNER join comite c on e.codigoempleado=c.codigoempleado
+WHERE c.codigocomite=$P{CODIGO}
+and c.fechadesdecomite>=$P{FECHAINICIO}
+and c.fechahastacomite<=$P{FECHAFIN}]]>
 	</queryString>
 	<field name="COUNT(c.codigocomite)" class="java.lang.Long"/>
 	<field name="nombreempleado" class="java.lang.String">
@@ -31,14 +43,6 @@
 	</background>
 	<title>
 		<band height="79" splitType="Stretch">
-			<image>
-				<reportElement x="33" y="14" width="100" height="50" uuid="468c5dbd-88c1-4eb9-b21b-03c0b5467bbc"/>
-				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("GOES.jpg")]]></imageExpression>
-			</image>
-			<image>
-				<reportElement x="688" y="14" width="100" height="50" uuid="7bc9cf9a-8bf5-49dd-9141-55e8d72ea77f"/>
-				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("LOGOMJ.jpg")]]></imageExpression>
-			</image>
 			<staticText>
 				<reportElement x="338" y="37" width="126" height="20" uuid="ff276982-a8e2-4630-862b-199b523e2b30"/>
 				<text><![CDATA[Direccion de Recursos Humanos]]></text>
@@ -54,10 +58,10 @@
 		</band>
 	</title>
 	<pageHeader>
-		<band height="41" splitType="Stretch">
+		<band height="46" splitType="Stretch">
 			<staticText>
-				<reportElement x="334" y="8" width="130" height="20" uuid="d2820ed1-563c-4556-97e7-7f9324cc9b90"/>
-				<text><![CDATA[Reporte de Comites lol]]></text>
+				<reportElement x="336" y="2" width="130" height="20" uuid="d2820ed1-563c-4556-97e7-7f9324cc9b90"/>
+				<text><![CDATA[Reporte de Comites ]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy">
 				<reportElement x="710" y="3" width="100" height="20" uuid="04e4df16-4b67-4340-8a24-945fe1331771"/>
@@ -66,66 +70,100 @@
 			<textField>
 				<reportElement x="681" y="21" width="80" height="20" uuid="c42b5a94-d56f-415b-9967-63beca281b2d"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA["Page "+$V{PAGE_NUMBER}+" of"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
 				<reportElement x="761" y="21" width="40" height="20" uuid="0079daa6-1363-4574-a3cf-8cb78dec494e"/>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
-		</band>
-	</pageHeader>
-	<columnHeader>
-		<band height="61" splitType="Stretch">
 			<staticText>
-				<reportElement x="7" y="31" width="100" height="20" uuid="e3dcf82b-5ff6-4cd8-beed-a789d18846ba"/>
-				<text><![CDATA[Empleado]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="133" y="31" width="100" height="20" uuid="82b4c1ff-82b5-41e6-9f4d-416a004632e9"/>
-				<text><![CDATA[Puesto]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="260" y="31" width="100" height="20" uuid="3013f3b1-0485-44c2-8e02-c1b28b9f452f"/>
-				<text><![CDATA[Acuerdo]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="502" y="31" width="100" height="20" uuid="ff22621e-182f-4480-9973-78ff7fa9e390"/>
+				<reportElement x="214" y="21" width="38" height="20" uuid="46e35f03-e614-451b-9ee7-b3d1e73cdf93"/>
 				<text><![CDATA[Desde]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="631" y="31" width="100" height="20" uuid="970e7ca7-832f-4f96-a6b9-963f678a40b6"/>
+				<reportElement x="481" y="21" width="39" height="20" uuid="3e1a0d6d-d4bc-49c7-be68-31d48017ee8f"/>
+				<text><![CDATA[Hasta]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="264" y="21" width="100" height="20" uuid="fe98f365-d451-4cbf-8c21-ba4984bac98e"/>
+				<textFieldExpression><![CDATA[$F{fechadesdecomite}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="532" y="21" width="100" height="20" uuid="689ef65a-c28c-4309-a567-86b3627c4c96"/>
+				<textFieldExpression><![CDATA[$F{fechahastacomite}]]></textFieldExpression>
+			</textField>
+		</band>
+	</pageHeader>
+	<columnHeader>
+		<band height="54" splitType="Stretch">
+			<staticText>
+				<reportElement x="14" y="34" width="100" height="20" uuid="e3dcf82b-5ff6-4cd8-beed-a789d18846ba"/>
+				<textElement>
+					<font size="12" isBold="false"/>
+				</textElement>
+				<text><![CDATA[Empleado]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="141" y="34" width="100" height="20" uuid="82b4c1ff-82b5-41e6-9f4d-416a004632e9"/>
+				<textElement>
+					<font size="12" isBold="false"/>
+				</textElement>
+				<text><![CDATA[Puesto]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="271" y="34" width="100" height="20" uuid="3013f3b1-0485-44c2-8e02-c1b28b9f452f"/>
+				<textElement>
+					<font size="12" isBold="false"/>
+				</textElement>
+				<text><![CDATA[Acuerdo]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="551" y="34" width="100" height="20" uuid="ff22621e-182f-4480-9973-78ff7fa9e390"/>
+				<textElement>
+					<font size="12" isBold="false"/>
+				</textElement>
+				<text><![CDATA[Desde]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="694" y="34" width="100" height="20" uuid="970e7ca7-832f-4f96-a6b9-963f678a40b6"/>
+				<textElement>
+					<font size="12" isBold="false"/>
+				</textElement>
 				<text><![CDATA[Hasta]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="383" y="31" width="100" height="20" uuid="b0c4178c-b9e5-44a9-a803-d86696058694"/>
-				<text><![CDATA[nombrecomite]]></text>
+				<reportElement x="407" y="34" width="100" height="20" uuid="b0c4178c-b9e5-44a9-a803-d86696058694"/>
+				<textElement>
+					<font size="12" isBold="false"/>
+				</textElement>
+				<text><![CDATA[Comite]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="30" splitType="Stretch">
+		<band height="25" splitType="Stretch">
 			<textField>
-				<reportElement x="7" y="8" width="100" height="20" uuid="f0df6217-7549-481b-a72f-724465680625"/>
+				<reportElement x="7" y="4" width="100" height="20" uuid="f0df6217-7549-481b-a72f-724465680625"/>
 				<textFieldExpression><![CDATA[$F{nombreempleado}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="133" y="8" width="100" height="20" uuid="28592223-1eac-441a-87f7-4c26d7e010b3"/>
+				<reportElement x="133" y="4" width="100" height="20" uuid="28592223-1eac-441a-87f7-4c26d7e010b3"/>
 				<textFieldExpression><![CDATA[$F{nombrepuesto}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="260" y="8" width="100" height="20" uuid="95e53dcc-0bab-432d-923a-2bb8db742b27"/>
+				<reportElement x="263" y="4" width="100" height="20" uuid="95e53dcc-0bab-432d-923a-2bb8db742b27"/>
 				<textFieldExpression><![CDATA[$F{numeroacuerdocomite}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="502" y="8" width="100" height="20" uuid="779232a7-bda8-4e32-ad57-bc01d87c4833"/>
+				<reportElement x="543" y="4" width="100" height="20" uuid="779232a7-bda8-4e32-ad57-bc01d87c4833"/>
 				<textFieldExpression><![CDATA[$F{fechadesdecomite}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="631" y="8" width="100" height="20" uuid="a345a786-0053-44fc-8fdc-b793c3dcc4f1"/>
+				<reportElement x="692" y="4" width="100" height="20" uuid="a345a786-0053-44fc-8fdc-b793c3dcc4f1"/>
 				<textFieldExpression><![CDATA[$F{fechahastacomite}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="383" y="10" width="100" height="20" uuid="5c39e05e-6a51-468e-856f-bbcf005647b6"/>
+				<reportElement x="397" y="4" width="100" height="20" uuid="5c39e05e-6a51-468e-856f-bbcf005647b6"/>
 				<textFieldExpression><![CDATA[$F{nombrecomite}]]></textFieldExpression>
 			</textField>
 		</band>
@@ -142,6 +180,10 @@
 			<textField>
 				<reportElement x="131" y="13" width="100" height="20" uuid="c8f0b7bc-8fc1-4aaa-976b-37d3a33e51ac"/>
 				<textFieldExpression><![CDATA[$F{COUNT(c.codigocomite)}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="652" y="10" width="100" height="20" uuid="59caeda8-7173-45d2-8c20-86e5f6ed160f"/>
+				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 		</band>
 	</columnFooter>
