--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_misionesexternas1.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_misionesexternas1.jrxml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="8c48c388-ce73-4e37-82ba-8c43f6d2310b">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="null" pageWidth="792" pageHeight="612" orientation="Landscape" columnWidth="752" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="2dcbe6cb-3379-4a1c-aaae-d0184a031b8a">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="0"/>
+	<property name="ireport.y" value="90"/>
 	<parameter name="CODIGO" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
@@ -13,13 +13,14 @@
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
 	<queryString>
-		<![CDATA[SELECT count(e.codigoempleado), e.nombreempleado,p.nombrepuesto,m.nombremision,m.objetivomision,m.departamentomision,m.paisdestino,m.ciudad, m.fechasalidamision,m.fecharegresomision,m.numeroacuerdo, m.boleto,m.gastoviaje FROM empleado e INNER JOIN 
-empleadomision em on e.codigoempleado=em.codigoempleado INNER JOIN mision m on em.codigomision=m.codigomision INNER JOIN puesto p on e.codigoempleado=p.codigoempleado
-where e.codigoempleado=$P{CODIGO} and
-m.fechasalidamision>=$P{FECHAINICIO} and 
-m.fecharegresomision<=$P{FECHAFIN}]]>
+		<![CDATA[select count(m.codigomision) totalRegistros, e.nombreempleado,p.nombrepuesto,m.nombremision, m.objetivomision,m.departamentomision,m.paisdestino,m.ciudad,m.fechasalidamision,m.fecharegresomision from empleado e 
+							inner join empleadopuesto ep on e.codigopuesto=ep.codigopuesto inner join puesto p on ep.codigopuesto=p.codigopuesto 
+							inner join empleadomision em on e.codigoempleado=em.codigoempleado inner join mision m on em.codigomision=m.codigomision
+where m.codigomision=$P{CODIGO}
+AND m.fechasalidamision>=$P{FECHAINICIO}
+AND m.fecharegresomision<=$P{FECHAFIN}]]>
 	</queryString>
-	<field name="count(e.codigoempleado)" class="java.lang.Long"/>
+	<field name="totalRegistros" class="java.lang.Long"/>
 	<field name="nombreempleado" class="java.lang.String">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
@@ -47,266 +48,176 @@ m.fecharegresomision<=$P{FECHAFIN}]]>
 	<field name="fecharegresomision" class="java.sql.Date">
 		<fieldDescription><![CDATA[]]></fieldDescription>
 	</field>
-	<field name="numeroacuerdo" class="java.lang.Integer">
-		<fieldDescription><![CDATA[]]></fieldDescription>
-	</field>
-	<field name="boleto" class="java.lang.String">
-		<fieldDescription><![CDATA[]]></fieldDescription>
-	</field>
-	<field name="gastoviaje" class="java.lang.Float">
-		<fieldDescription><![CDATA[]]></fieldDescription>
-	</field>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="83" splitType="Stretch">
+		<band height="79" splitType="Stretch">
 			<staticText>
-				<reportElement x="315" y="5" width="173" height="20" uuid="eb40afea-6ba3-4b2a-a133-a30d3c37c19f"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
-				</textElement>
-				<text><![CDATA[Ministrio de Justicia y Segruridad Publica]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="316" y="28" width="173" height="20" uuid="1facb2b0-f39d-4b97-8762-b4d9c63d0b85"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
-				</textElement>
+				<reportElement x="333" y="28" width="126" height="20" uuid="f6364ad1-a050-45f6-aa5c-c75d3e4c6be4"/>
 				<text><![CDATA[Direccion de Recursos Humanos]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="369" y="49" width="64" height="20" uuid="f33cb8a7-67db-4828-b13a-cd3344d88694"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
-				</textElement>
-				<text><![CDATA[SISADMRH]]></text>
+				<reportElement x="349" y="45" width="66" height="20" uuid="53c61a65-662c-4ca2-9136-495a026f2ca8"/>
+				<text><![CDATA[SISASMRH]]></text>
 			</staticText>
-			<image>
-				<reportElement x="9" y="5" width="178" height="70" uuid="09c37ca6-6f4a-4344-944e-91bf0a21f9ed"/>
-				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("GOES.jpg")]]></imageExpression>
-			</image>
-			<image>
-				<reportElement x="614" y="0" width="178" height="75" uuid="1b62672e-62d1-4dde-994e-eab028a1db45"/>
-				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("LOGOMJ.jpg")]]></imageExpression>
-			</image>
+			<staticText>
+				<reportElement x="291" y="13" width="211" height="20" uuid="f50d78a8-a977-48ac-bf88-3ae6b985e0cd"/>
+				<text><![CDATA[Ministerio de Justicia  y Segurdiad Pública]]></text>
+			</staticText>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="84" splitType="Stretch">
+		<band height="50" splitType="Stretch">
 			<staticText>
-				<reportElement x="322" y="6" width="158" height="20" uuid="80799b73-0295-422b-81ee-9e95ff061044"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
-				</textElement>
-				<text><![CDATA[Reporte deMisiones Externas1]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="215" y="50" width="37" height="20" uuid="96b662dc-5276-4ed4-9ba8-c3aa657847d7"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
-				</textElement>
-				<text><![CDATA[Desde]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="503" y="52" width="45" height="20" uuid="d591d963-c094-40fb-b570-d0b6cc37ce2f"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
-				</textElement>
-				<text><![CDATA[Hasta]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="617" y="8" width="37" height="20" uuid="d8a8b1db-f71b-44cc-ab9d-c89d988eedc0"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
-				</textElement>
-				<text><![CDATA[Fecha]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="620" y="39" width="34" height="20" uuid="197e5b99-2271-4c11-8ce3-fb8919117aef"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
-				</textElement>
-				<text><![CDATA[Pagina]]></text>
+				<reportElement x="326" y="4" width="100" height="20" uuid="f98b7b1e-294d-401d-8ef0-6ac3d1933508"/>
+				<text><![CDATA[Misiones Exteras 1]]></text>
 			</staticText>
 			<textField pattern="dd/MM/yyyy">
-				<reportElement x="665" y="8" width="100" height="20" uuid="7c71ae19-bd87-41cf-93c5-809c06e0ab7e"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
-				</textElement>
+				<reportElement x="642" y="4" width="100" height="20" uuid="522ea680-0a38-4d57-85e4-bb346b7b2e98"/>
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="658" y="39" width="80" height="20" uuid="d424aa38-1353-4aa0-9361-715b95e43a48"/>
-				<textElement textAlignment="Right">
-					<font fontName="Times New Roman" size="12"/>
-				</textElement>
-				<textFieldExpression><![CDATA["Page "+$V{PAGE_NUMBER}+" of"]]></textFieldExpression>
+				<reportElement x="627" y="28" width="80" height="20" uuid="bbd9c940-6259-42e1-bcf6-2368e9ed5eb1"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression><![CDATA["Pagina "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="738" y="39" width="40" height="20" uuid="499dce47-fcd9-4b00-9104-d5f7f9d04a7b"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
-				</textElement>
+				<reportElement x="707" y="28" width="40" height="20" uuid="6bd63a2f-b93c-411f-8351-63b1032fc485"/>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="216" y="28" width="33" height="20" uuid="d2a16912-a733-4300-b665-c62c612d284b"/>
+				<text><![CDATA[Desde]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="444" y="23" width="33" height="20" uuid="6a48e812-19ca-4c11-9e30-ddf45777dfbc"/>
+				<text><![CDATA[Hasta]]></text>
+			</staticText>
 			<textField>
-				<reportElement x="258" y="50" width="100" height="20" uuid="0e537ab6-5b04-4867-ac7f-808343c546e2"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
-				</textElement>
+				<reportElement x="262" y="30" width="100" height="20" uuid="157d6ca8-db16-4416-a40c-9681b080f868"/>
 				<textFieldExpression><![CDATA[$F{fechasalidamision}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="553" y="54" width="100" height="20" uuid="c742cbaf-1998-4a5e-9ac7-8d63d1ab5bcb"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
-				</textElement>
+				<reportElement x="482" y="24" width="100" height="20" uuid="28a7eb53-2bf2-479c-b191-287e3b9f0308"/>
 				<textFieldExpression><![CDATA[$F{fecharegresomision}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="61" splitType="Stretch">
+		<band height="27" splitType="Stretch">
 			<staticText>
-				<reportElement x="3" y="2" width="100" height="20" uuid="c143e31d-e0cf-4858-b6ac-01d041eead6c"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
+				<reportElement x="0" y="0" width="100" height="20" uuid="3bb2c122-ff13-4d68-bec1-f29932908012"/>
+				<textElement textAlignment="Center">
+					<font size="12"/>
 				</textElement>
-				<text><![CDATA[Nombre de Empleado]]></text>
+				<text><![CDATA[Empleado]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="120" y="2" width="100" height="20" uuid="fbce835f-8c56-4959-826c-f9310f051fb4"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
+				<reportElement x="104" y="0" width="100" height="20" uuid="c4694226-c427-4e66-afa9-72d194fcb439"/>
+				<textElement textAlignment="Center">
+					<font size="12"/>
 				</textElement>
-				<text><![CDATA[Nombre de Puesto]]></text>
+				<text><![CDATA[Puesto]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="238" y="2" width="100" height="20" uuid="53e7f7cf-57eb-4f4b-b2c4-9f4138dce50f"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
+				<reportElement x="216" y="0" width="100" height="20" uuid="b5e00516-df2f-4df5-b687-3221cf2f5319"/>
+				<textElement textAlignment="Center">
+					<font size="12"/>
 				</textElement>
-				<text><![CDATA[Nombre de Mision]]></text>
+				<text><![CDATA[Mision]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="350" y="2" width="100" height="20" uuid="6e450094-7cf4-4bf2-af5a-5a66718b1631"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
+				<reportElement x="325" y="0" width="100" height="20" uuid="d09ab1bc-7338-49fe-a110-1bb7ce53dd38"/>
+				<textElement textAlignment="Center">
+					<font size="12"/>
 				</textElement>
 				<text><![CDATA[Objetivo]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="452" y="2" width="133" height="20" uuid="7a35779f-3998-4cde-9814-603affd7f15e"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
+				<reportElement x="435" y="0" width="100" height="20" uuid="4aeb56b1-60af-4685-838e-947966acda20"/>
+				<textElement textAlignment="Center">
+					<font size="12"/>
 				</textElement>
-				<text><![CDATA[Departamento o Institución]]></text>
+				<text><![CDATA[Departamento]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="593" y="2" width="100" height="20" uuid="d3873084-541e-499e-bc44-c7f519753a08"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
+				<reportElement x="545" y="0" width="100" height="20" uuid="6bbfd49e-22a2-4026-930f-dd9098ca6abd"/>
+				<textElement textAlignment="Center">
+					<font size="12"/>
 				</textElement>
-				<text><![CDATA[paisdestino]]></text>
+				<text><![CDATA[Pais Destino]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="702" y="2" width="100" height="20" uuid="f7e46393-03a8-421f-bc7f-55fe7cd80cc1"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
+				<reportElement x="655" y="0" width="100" height="20" uuid="0f16029b-06e6-4038-a832-80d8095c4959"/>
+				<textElement textAlignment="Center">
+					<font size="12"/>
 				</textElement>
-				<text><![CDATA[ciudad]]></text>
+				<text><![CDATA[Ciudad]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="125" splitType="Stretch">
+		<band height="20" splitType="Stretch">
 			<textField>
-				<reportElement x="3" y="9" width="100" height="20" uuid="b1b005ae-864f-49f5-a011-f11fbd3093a0"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
-				</textElement>
+				<reportElement x="5" y="0" width="100" height="20" uuid="3ff3bddc-1194-4ddd-918b-67052c6cbed7"/>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{nombreempleado}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="115" y="9" width="100" height="20" uuid="6f0ed926-0e80-49a5-82bb-ec78d0d2f9b2"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
-				</textElement>
+				<reportElement x="112" y="0" width="100" height="20" uuid="9509bd78-67f5-4e62-aeb6-c20a7061be34"/>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{nombrepuesto}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="238" y="9" width="100" height="20" uuid="a13bba26-20d2-4522-9178-e8555295c1d3"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
-				</textElement>
+				<reportElement x="226" y="0" width="100" height="20" uuid="8af08b45-b4ec-49ca-b161-bb3a2cbe6c65"/>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{nombremision}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="358" y="11" width="100" height="20" uuid="8e4cc4f3-3cfc-40d6-ac86-53a6bd393564"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
-				</textElement>
+				<reportElement x="334" y="0" width="100" height="20" uuid="b068c4f7-a9f4-4fa8-a2b5-af4f82eb22c2"/>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{objetivomision}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="474" y="11" width="100" height="20" uuid="4cfcd682-805b-41b7-83c5-d4a33e353e18"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
-				</textElement>
+				<reportElement x="444" y="0" width="100" height="20" uuid="2df1c5cc-37d6-495b-bd85-f02086117c6a"/>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{departamentomision}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="591" y="14" width="100" height="20" uuid="5e3dc9ce-5bbe-4755-b7b8-99cbdae1029e"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
-				</textElement>
+				<reportElement x="551" y="0" width="100" height="20" uuid="eee29f56-792c-4f6a-bce2-2ea73a714e51"/>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{paisdestino}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="702" y="14" width="100" height="20" uuid="9db4fa1e-dce6-4576-b10f-8c886422d2ed"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
-				</textElement>
+				<reportElement x="668" y="0" width="100" height="20" uuid="8da0660e-f862-47b0-a8d8-dc08e1355fe8"/>
+				<textElement textAlignment="Center"/>
 				<textFieldExpression><![CDATA[$F{ciudad}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="45" splitType="Stretch">
-			<line>
-				<reportElement x="6" y="4" width="786" height="1" uuid="b37763ee-35c3-4708-8495-876d721bdf12"/>
-			</line>
-			<staticText>
-				<reportElement x="15" y="13" width="100" height="20" uuid="a1d51a03-ed06-4c2e-9a3a-3a8a73c3906b"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
-				</textElement>
-				<text><![CDATA[Total de Registros]]></text>
-			</staticText>
-			<textField>
-				<reportElement x="120" y="13" width="100" height="20" uuid="9ee7aaa8-b848-466f-bc24-ab2e68caada8"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{count(e.codigoempleado)}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="681" y="15" width="100" height="20" uuid="e9ad9085-0b25-4d5c-81a6-3be123b4ef30"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
-			</textField>
-		</band>
+		<band height="43" splitType="Stretch"/>
 	</columnFooter>
 	<pageFooter>
 		<band height="54" splitType="Stretch">
+			<line>
+				<reportElement x="6" y="-38" width="736" height="1" uuid="3e85c97c-2b6f-43d7-b18b-75dbd6837542"/>
+			</line>
 			<staticText>
-				<reportElement x="305" y="17" width="192" height="20" uuid="a20363dd-95ec-4780-be8b-730f57e1f71d"/>
-				<textElement>
-					<font fontName="Times New Roman" size="12"/>
-				</textElement>
+				<reportElement x="4" y="-34" width="100" height="20" uuid="7a2e41cb-0c61-444b-af1b-a2df24e1d96a"/>
+				<text><![CDATA[Total de Registros]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="110" y="-33" width="100" height="20" uuid="75463e68-5544-4f38-ac62-a86e04d12f9c"/>
+				<textFieldExpression><![CDATA[$F{totalRegistros}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="650" y="-26" width="100" height="20" uuid="908c630c-d5ee-4e68-a37a-8b77a84c7110"/>
+				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="320" y="20" width="193" height="20" uuid="3a022eab-873b-4ca9-9319-89d4b3404f76"/>
 				<text><![CDATA[Derechos Reservados UES/FIA/EISI]]></text>
 			</staticText>
 		</band>
