--- a/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridades.html
+++ b/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridades.html
@@ -59,6 +59,15 @@
                 location.href = '../../roles/';
        }); 
 }
+    if([[${msg}]]===0){
+       swal({
+           
+                title: "Exito!",
+                text: "Registro ingresado correctamente",
+                type: "success",
+                icon: "success",
+       }) 
+}
     
     if([[${msg}]]===4){
         swal({
