--- a/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
+++ b/src/main/resources/templates/fragments/asistenciacapacitacion/asistenciacapacitacionform.html
@@ -47,37 +47,17 @@
                      <div class="form-group">
                         <label class="col-sm-2 control-label ">Horas Recibidas:</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control numeros" required="true" name="horasrecibidas"/>
+                            <input type="text" class="form-control numeros" required="true" maxlength="3" name="horasrecibidas"/>
                         </div>
                     </div>
                    
 
-                    <!--             <div class="form-group">
-                         <label class="col-sm-2 control-label">Ubicacion:</label>
-                                              <div class="col-sm-10">
-                                                  <select class="form-control" th:field="*{codigocapacitacion.codigocapacitacion}" >
-                                         <option th:each="c:${capacitaciones}" placeholder="Seleccionar capacitacion" th:value="${c.codigocapacitacion" th:text="${c. nombrecapacitacion}"></option>
-                                     </select>
-                        <input type="number" class="form-control" th:field="*{codigoempleado.codigoempleado}"/>
-                                                   </div>
-                                         </div>-->
-
-
-                    <!--             <div class="form-group">
-                         <label class="col-sm-2 control-label">Cargo:</label>
-                                              <div class="col-sm-10">
-                                                  <select class="form-control" th:field="*{codigocapacitacion.codigocapacitacion}" >
-                                         <option th:each="c:${capacitaciones}" placeholder="Seleccionar capacitacion" th:value="${c.codigocapacitacion" th:text="${c. nombrecapacitacion}"></option>
-                                     </select>
-                        <input type="number" class="form-control" th:field="*{codigoempleado.codigoempleado}"/>
-                                                   </div>
-                                         </div>-->
 
                    
                     <div class="form-group">
                         <label class="col-sm-2 control-label ">puesto:</label>
                         <div class="col-sm-10">
-                            <input type="text" id="puesto" class="form-control" required="true"/>
+                            <input type="text" id="puesto" class="form-control" maxlength=""required="true" />
                         </div>
                     </div>
                     <div class="form-group">
