--- a/src/main/resources/templates/fragments/capacitador/capacitadorform.html
+++ b/src/main/resources/templates/fragments/capacitador/capacitadorform.html
@@ -107,7 +107,7 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label">Carnet:</label>
                         <div class="col-sm-10">
-                            <input type="text" class="form-control numeros" required="true" onkeypress="return valida(event)" th:field="*{carnetresidencia}"/>
+                            <input type="text" class="form-control numeros" required="true" maxlength="5" onkeypress="return valida(event)" th:field="*{carnetresidencia}"/>
                               <small class="form-text text-danger" th:if="${#fields.hasErrors('carnetresidencia')}" th:errors="*{carnetresidencia}"></small>
                         </div>
                     </div>
