--- a/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadform.html
+++ b/src/main/resources/templates/fragments/nivelescolaridad/nivelescolaridadform.html
@@ -25,7 +25,7 @@
 <div class="form-group">
                 <label class="col-sm-2 control-label">Estudios realizados:(*)</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control" required="true" size="100" maxlength="100" th:field="*{estudiorealizado}"/>
+                    <input type="text" class="form-control" required="true" size="100" maxlength="100" th:field="*{estudiorealizado}"/> 
                 </div>
             </div>
             <div class="form-group">
@@ -37,7 +37,7 @@
             <div class="form-group">
                 <label class="col-sm-2 control-label">Anos aprobados:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control numeros" th:field="*{aniosaprobados}"/>
+                    <input type="text" class="form-control numeros" maxlength="2"th:field="*{aniosaprobados}"/>
                 </div>
             </div>
              <div class="form-group">
