--- a/src/main/resources/templates/fragments/otherreports/comitesreport.html
+++ b/src/main/resources/templates/fragments/otherreports/comitesreport.html
@@ -13,12 +13,16 @@
             <h3>GENERACION DE COMITES
             </h3>
             <div>
-                <form class="form-horizontal" id="formreport">
+                <form class="form-horizontal" id="formreport" th:object="${comites}">
 
                     <div class="form-group">
                         <label class="col-sm-3 control-label" >Codigo comite:</label>
                         <div class="col-sm-8">
-                            <input type="text" class="form-control" id="codigo" name="codigo"/>
+                            <select class="form-control" id="codigo" name="codigo">
+                            <option value="0">-- Seleccione un comite --</option>
+                            <option th:each="d:${comites}" th:value="${d.codigocomite}" th:text="${d.nombrecomite}"></option>
+                            </select>
+                            <!--<input type="text" class="form-control" id="codigo" name="codigo"/>-->
                         </div>
                     </div>
                      <div class="form-group">    
