--- a/src/main/webapp/WEB-INF/reports/otherreports/rpt_comites.jrxml
+++ b/src/main/webapp/WEB-INF/reports/otherreports/rpt_comites.jrxml
@@ -12,6 +12,9 @@
 	<parameter name="FECHAFIN" class="java.lang.String">
 		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
 	</parameter>
+	<parameter name="IMAGE_PATH" class="java.lang.String">
+		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
+	</parameter>
 	<queryString>
 		<![CDATA[select COUNT(c.codigocomite), e.nombreempleado,p.nombrepuesto,c.numeroacuerdocomite,c.nombrecomite,c.fechadesdecomite,c.fechahastacomite from empleado e 
  inner join empleadopuesto ep ON ep.codigoempleado=ep.codigoempleado inner join puesto p on ep.codigopuesto=p.codigopuesto INNER join comite c on e.codigoempleado=c.codigoempleado
@@ -55,6 +58,14 @@ and c.fechahastacomite<=$P{FECHAFIN}]]>
 				<reportElement x="354" y="54" width="66" height="20" uuid="7048bb48-5bd3-4523-954e-6d75beaee769"/>
 				<text><![CDATA[SISASMRH]]></text>
 			</staticText>
+			<image>
+				<reportElement x="29" y="22" width="212" height="38" uuid="d5244a04-208d-4ef9-bc04-8c758f3c1f28"/>
+				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/GOES.jpg")]]></imageExpression>
+			</image>
+			<image>
+				<reportElement x="601" y="22" width="167" height="52" uuid="757880b3-ddc9-4fcd-9ec0-2b4cae2e48bb"/>
+				<imageExpression><![CDATA[$P{IMAGE_PATH}.concat("/LOGOMJ.jpg")]]></imageExpression>
+			</image>
 		</band>
 	</title>
 	<pageHeader>
@@ -86,11 +97,11 @@ and c.fechahastacomite<=$P{FECHAFIN}]]>
 			</staticText>
 			<textField>
 				<reportElement x="264" y="21" width="100" height="20" uuid="fe98f365-d451-4cbf-8c21-ba4984bac98e"/>
-				<textFieldExpression><![CDATA[$F{fechadesdecomite}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{FECHAINICIO}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="532" y="21" width="100" height="20" uuid="689ef65a-c28c-4309-a567-86b3627c4c96"/>
-				<textFieldExpression><![CDATA[$F{fechahastacomite}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$P{FECHAFIN}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
